# peach_framework

./: .gitignore  CMakeLists.txt  init.py
src/framework_core/: StatusCodes.h  Transform.h
src/framework_core/Implementations/: MetalImplementation.cpp  MiniaudioImplementation.cpp  VmaImplementation.cpp
src/framework_core/Rendering/: Camera.cpp  Camera.h  DirectionalLight.h  Fog.h  PeachMaterial.cpp  PeachMaterial.h  PeachMesh.h  PeachTexture.cpp  PeachTexture.h  PointLight.h  ResourceData.h  Skybox.h  SpotLight.h  TextureAtlas.cpp  TextureAtlas.h
src/framework_core/Rendering/Metal/: MetalBridge.mm  MetalRenderer.cpp  MetalRenderer.h  MetalShaderProgram.cpp  MetalShaderProgram.h
src/framework_core/Rendering/OpenGL/Browser/: WebGLRenderer.cpp  WebGLRenderer.h  WebGLShaderProgram.cpp  WebGLShaderProgram.h
src/framework_core/Rendering/OpenGL/Desktop/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShaderProgram.cpp  OpenGLShaderProgram.h  OpenGLViewport.cpp  OpenGLViewport.h
src/framework_core/Rendering/OpenGL/Mobile/: MobileGLRenderer.cpp  MobileGLRenderer.h
src/framework_core/Rendering/Vulkan/: PipelineFactory.cpp  PipelineFactory.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShaderProgram.cpp  VulkanShaderProgram.h
src/framework_core/UI/: Button.cpp  Button.h  Label.h  MenuBar.h  Panel.h  PeachConsole.cpp  PeachConsole.h  ScrollArea.h  ShapePrimitives.cpp  ShapePrimitives.h  Slider.h
src/framework_core/Utils/: DynamicLoader.cpp  DynamicLoader.h  Logger.cpp  Logger.h  LoggerFlags.h  Math.cpp  Math.h  NullResources.h  Random.h  RingBuffer.h  Serializer.h  ThreadPool.cpp  ThreadPool.h
src/framework_core/Visual/: ParallaxBackgroundPlayer.cpp  ParallaxBackgroundPlayer.h  ParallaxLayer.cpp  ParallaxLayer.h  Sprite.cpp  Sprite.h  TileMap.cpp  TileMap.h
src/framework_tools/: main.cpp
